--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <!-- <link href="../rubproducti9n/mdb/css/global.min.css" rel="stylesheet"> -->
+    <link href="css/global.min.css" rel="stylesheet">
     <link href="https://rubyproducti9n.github.io/concertera/mdb/css/global.min.css" rel="stylesheet">
     <link href="https://rubyproducti9n.github.io/concertera/css/room.css" rel="stylesheet">
 
@@ -142,130 +143,6 @@ border: 0px #000 solid;}
   overflow: visible;
   text-overflow: ellipsis;
 }
-.card{
-  display: inline-block;
-  margin: 0 10px;
-  padding-bottom: 20px;
-  width: 22.8%;
-  height: 30%;
-  color: rgb(233, 233, 233);
-  background: rgb(24, 24, 24);
-  /* backdrop-filter: blur(14px); */
-  box-shadow: 0px 0px 00px rgba(0, 0, 0, 0.192);
-  border: 0px rgba(255, 2, 107, 0.185) solid;
-  border-radius: 50px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  /* cursor: pointer; */
-  transition: 0.3s ease;
-}
-.card:hover{
-  height: 33%;
-  color: rgb(255, 255, 255);
-  background: #111111;
-  border: 0px rgba(255, 2, 107, 0.705) solid;
-  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.192);
-  transition: 0.3s ease;
-}
-.card-img{
-  width: 100%;
-  border-radius: 0px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0);
-}
-.tags{
-    color: rgb(0, 145, 230);
-    background: rgba(201, 32, 32, 0);
-    padding: 5px 10px;
-    width: fit-content;
-    font-size: 13px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.tags:hover{
-  text-decoration: underline;
-}
-.dr-title{
-  margin: 20px 0;
-  padding: 0 10px;
-  font-size: 15px;
-  font-family: 'Comfortaa', cursive;
-}
-.dr-details{
-  color: rgb(148, 148, 148);
-  overflow: scroll;
-  text-overflow: ellipsis;
-  line-height: 15px;
-  padding: 0 10px;
-  font-size: 12px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  width: 100%;
-  height: 100%;
-}
-.rating{
-  margin: 10px 20px;
-  cursor: default;
-  z-index: 13;
-}
- .dr-details .card:hover {
-  color: #fff;
-}
-.profile-img{
-  width: 50%;
-  border-radius: 50%;
-  border: 2px #f50000a1 solid;
-  margin-top: 20px;
-  box-shadow: 5px 5px 20px #00000057;
-}
-.profile-body{
-  padding: 10px 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.mech-btn-fill{
-  color: #fff;
-  background: #ff0055;
-  border: 2px #ff0077 solid;
-  border-radius: 4px;
-  margin: 5px 15px;
-  padding: 10px 20px;
-  font-size: 11px;
-  font-family: 'Comfortaa', cursive;
-  outline: none;
-  transition: 0.2s ease;
-}
-.mech-btn-fill:hover{
-  color: #ffffffec;
-  background: #ff0040ec;
-  border: 2px #ff0040ec solid;
-  text-shadow: 0px 0px 10px rgb(255, 255, 255);
-  box-shadow: 0px 0px 20px #ff0040ec;
-  transition: 0.2s ease;
-}
-.mech-btn-fill:active{
-  color: #ffffff;
-  background: #d10034ec;
-  border: 2px #94000000 solid;
-  box-shadow: 0 0 20px #d10034ec;
-  transition: 0.2s ease;
-}
-.mech-btn-outline{
-  color: #ff0077;
-  background: #46008000;
-  border: 2px #ff0077 solid;
-  border-radius: 4px;
-  margin: 5px 0;
-  padding: 10px 20px;
-  font-size: 10px;
-  font-family: 'Comfortaa', cursive;
-  outline: none;
-  transition: 0.2s ease;
-}
-.mech-btn-outline:hover{
-  color: #ffffff;
-  background: #ff0040ec;
-  border: 2px #ff0040ec solid;
-  text-shadow: 0px 0px 10px rgb(255, 255, 255);
-  box-shadow: 0px 0px 20px #ff0040ec;
-  transition: 0.2s ease;
-}
     .note{
         display: none;
         position: fixed;
@@ -361,69 +238,6 @@ footer{
   margin: 10px 0px;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-.card{
-  display: inline-block;
-  margin: 20px 30px;
-  width: 80%;
-  height: 100%;
-  background: rgb(29, 29, 29);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0);
-  border-radius: 50px;
-  overflow: hidden;
-  word-wrap: break-word;
-  text-overflow: ellipsis;
-  cursor: pointer;
-  transition: 0.5s ease;
-}
-.card:hover{
-  transition: 0.5s ease;
-}
-.card-img{
-  width: 100%;
-  border-radius: 0px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0);
-}
-.dr-title{
-  margin: 20px 0;
-  padding: 0 10px;
-  font-size: 11px;
-  font-family: 'Comfortaa', cursive;
-  color: rgb(255, 255, 255);
-}
-.dr-details{
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding: 0 10px;
-  font-size: 10px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  width: 100%;
-  height: 100%;
-}
-.mech-btn-fill{
-  display: inline-block;
-  border-radius: 10px;
-  margin: 10px 10px;
-  padding: 10px 20px;
-  font-size: 11px;
-  font-family: 'Comfortaa', cursive;
-  cursor: pointer;
-  transition: 0.2s ease;
-}
-.mech-btn-fill:hover{
-  transition: 0.2s ease;
-}
-.mech-btn-outline{
-  border-radius: 10px;
-  margin: 20px 0;
-  padding: 10px 20px;
-  font-size: 10px;
-  font-family: 'Comfortaa', cursive;
-  cursor: pointer;
-  transition: 0.2s ease;
-}
-.mech-btn-outline:hover{
-  transition: 0.2s ease;
 }
 }
 </style>
