--- a/pages/materials.html
+++ b/pages/materials.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="../css/global.min.css" rel="stylesheet">
     <link href="https://rubyproducti9n.github.io/concertera/mdb/css/global.min.css" rel="stylesheet">
     <link href="https://rubyproducti9n.github.io/concertera/css/room.css" rel="stylesheet">
 
@@ -147,6 +148,35 @@
     </style>
 </head>
 <body>
+    <center>
+        <div class="modern-navigation">
+        <div class="modern-dash"></div><br>
+        <span class="disabled" onclick="back()">
+          <a class="" data-mdb-toggle="tooltip" title="Hi! I'm tooltip">
+            <i class="material-icons modern-nav-ic">arrow_back</i>
+          </a>
+      </span>
+        <span class="" onclick="home()">
+          <a class="" data-mdb-toggle="tooltip" title="Home">
+            <i class="material-icons modern-nav-ic  modern-nav-active">home</i>
+          </a>
+        </span>
+        <span class="disabled" onclick="materials()">
+          <a class="" data-mdb-toggle="tooltip" title="Materials">
+            <i class="material-icons modern-nav-ic">dns</i>
+          </a>
+        </span>
+        <span class="" onclick="announcements()">
+          <a class="" data-mdb-toggle="tooltip" title="Announcements">
+            <i class="material-icons modern-nav-ic ">campaign</i>
+          </a>
+        </span>
+        <span class="" onclick="info()">
+          <a class="" data-mdb-toggle="tooltip" title="Info">
+            <i class="material-icons modern-nav-ic ">info</i>
+          </a>
+        </span>
+        </div></center>
 <div class="btn-upload">
    <a href="https://forms.gle/34EL7Z9uGRH8zcPe6" draggable="false">
     Upload Material
@@ -182,6 +212,8 @@
 </table>
 </div>
 <script>
+    function home(){window.location = "../index.html";}
+    function announcements(){window.location = "pages/announcements.html";}
 </script>
 </body>
 </html>
